--- a/index.html
+++ b/index.html
@@ -10,6 +10,17 @@
         
     </script>
 
+
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-81WDBN6ZTN"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+
+      gtag('config', 'G-81WDBN6ZTN');
+    </script>
+    
   </head>
   <body>
     <div id="app"></div>
